# buttomCash

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: backtesting.ipynb  experements.ipynb  inner_bot.py  parser_orderbook.py  ta_data.ipynb
src/experements/: momentum&candles.ipynb  roll_window.ipynb
