[tool.poetry]
name = "buttomcash"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1"
pandas = "^2.0.1"
tqdm = "4.64.1"
matplotlib = "^3.7.1"
ta = "^0.10.2"
torch = "^2.0.0"
pytorch-lightning = "^2.0.2"
rich = "^13.3.5"
backtesting = "^0.3.3"
cufflinks = "^0.17.3"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
pre-commit = "^3.3.1"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = {extras = ["jupyter"], version = "^23.3.0"}
jupyter-contrib-nbextensions = "^0.7.0"
widgetsnbextension = "^4.0.7"
ipywidgets = "^8.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
